add some sc functions

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 ###################################################################################################
 #test environment
 ###################################################################################################
-db.jdbcUrl  = jdbc:mysql://192.168.133.173/sendcloud?useUnicode=true&amp;characterEncoding=utf8
-db.user     = sendcloud
-db.password = A9499297
+db.jdbcUrl  = jdbc:mysql://127.0.0.1/marketing?useUnicode=true&amp;characterEncoding=utf8
+db.user     = root
+db.password = 19880830zd
 
 ###################################################################################################
 #production environment
