--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,13 +1,13 @@
 ###################################################################################################
 #test environment
 ###################################################################################################
-db.jdbcUrl  = jdbc:mysql://127.0.0.1/marketing?useUnicode=true&amp;characterEncoding=utf8
-db.user     = root
-db.password = 19880830zd
+#db.jdbcUrl  = jdbc:mysql://127.0.0.1/marketing?useUnicode=true&amp;characterEncoding=utf8
+#db.user     = root
+#db.password = 19880830zd
 
 ###################################################################################################
 #production environment
 ###################################################################################################
-#db.jdbcUrl  = jdbc:mysql://10.10.58.12:3306/sendcloud?useUnicode=true&amp;characterEncoding=utf8
-#db.user     = sendcloud
-#db.password = GBDgo77
+db.jdbcUrl  = jdbc:mysql://69.85.85.147:3306/marketing?useUnicode=true&amp;characterEncoding=utf8
+db.user     = marketing
+db.password = 19880830zd
