using highchart; handle more event

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,15 +1,15 @@
 ################################################################################
-#
+# dev
 ################################################################################
-marketing.redis.host=69.85.92.97
-marketing.redis.port=6379 
-marketing.redis.password=199111@0Smy
+#marketing.redis.host=69.85.92.97
+#marketing.redis.port=6379 
+#marketing.redis.password=199111@0Smy
 
 
 
 
 ################################################################################
-#
+# production
 ################################################################################
 marketing.redis.host=69.85.92.97
 marketing.redis.port=6379 
