--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,18 @@
 			<version>4.3-beta2</version>
 		</dependency>
 
+		<!-- qq -->
+<!-- 		<dependency>
+		    <groupId>com.belerweb</groupId>
+		    <artifactId>qq-connect</artifactId>
+		    <version>1.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.qq</groupId>
+			<artifactId>connect</artifactId>
+			<version>1.3.0</version>
+			<scope>compile</scope>
+		</dependency> -->
 	</dependencies>
 
 	<properties>
